try to create pagination :/

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <div class="modal">
             
         </div>
+        <div class="pagination">
+            
+        </div>
     </div>
     <script src="js/app.js"></script>
 </body>
